--- a/line/index.html
+++ b/line/index.html
@@ -137,7 +137,8 @@ title: Math, Sonification, Plots
         #myAnimation {
                 width: 20px;
                 height: 20px;
-                position: absolute;
+                //position: absolute;
+                position: relative;
                 background-color: #555;
                 border-radius: 50%;
 
