--- a/line/index.html
+++ b/line/index.html
@@ -138,7 +138,7 @@ title: Math, Sonification, Plots
                 width: 20px;
                 height: 20px;
                 //position: absolute;
-                position: relative;
+                position: fixed;
                 background-color: #555;
                 border-radius: 50%;
 
