--- a/line/index.html
+++ b/line/index.html
@@ -137,8 +137,7 @@ title: Math, Sonification, Plots
         #myAnimation {
                 width: 20px;
                 height: 20px;
-                //position: absolute;
-                position: sticky;
+                position: absolute;
                 background-color: #555;
                 border-radius: 50%;
 
