--- a/line/index.html
+++ b/line/index.html
@@ -198,7 +198,7 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:4%; top:2%;}
+            0%   {left:20px; top:0px;}
             100% {left:80%; top:80%;}
         }
 
