--- a/line/index.html
+++ b/line/index.html
@@ -265,20 +265,20 @@ title: Math, Sonification, Plots
             }
 
             var gtech = document.getElementById("gtech");
-            var line = document.getElementById("line");
+            var plot = document.getElementById("line");
             function setBG_Black() {
                 document.getElementById("myAnimation").style.backgroundColor = "yellow";
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                 document.body.style.color = "yellow";
                 gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
-                line.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
+                plot.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
             }
             function setBG_White() {
                 document.getElementById("myAnimation").style.backgroundColor = "black";
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
                 document.body.style.color = "black";
                 gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
-                line.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
+                plot.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
             }
         </script>
 
