--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -245,7 +245,7 @@ title: Math, Sonification, Plots
             src="https://rbobkoskie3.github.io/images/ST_Pos_Line.png"
             title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
 
-        <div id ="myAnimation"></div>
+        <div id ="myAnimation" class="myContainer"></div>
 
     </div>
 
