--- a/line/index.html
+++ b/line/index.html
@@ -186,15 +186,15 @@ title: Math, Sonification, Plots
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes tracePlt {
             0%   {left:20px; top:0px;}
-            100% {left:790px; top:600px;}
+            100% {left:80%; top:80%;}
         }
         @-moz-keyframes tracePlt {
             0%   {left:20px; top:0px;}
-            100% {left:790px; top:600px;}
+            100% {left:80%; top:80%;}
         }
         @-o-keyframes tracePlt {
             0%   {left:20px; top:0px;}
-            100% {left:790px; top:600px;}
+            100% {left:80%; top:80%;}
         }
         /* Standard syntax */
         @keyframes tracePlt {
