--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -198,7 +198,7 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:285px; top:900px;}
+            0%   {left:20px; top:100px;}
             100% {left:80%; top:10%;}
         }
 
@@ -245,7 +245,7 @@ title: Math, Sonification, Plots
             src="https://rbobkoskie3.github.io/images/ST_Pos_Line.png"
             title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
 
-        <div id ="myAnimation" class="myContainer"></div>
+        <div id ="myAnimation"></div>
 
     </div>
 
