--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -198,8 +198,8 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:40px; top:300px;}
-            100% {left:80%; top:10%;}
+            0%   {left:40px; top:80%;}
+            100% {left:80%; top:20px;}
         }
 
         /*
