--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -198,7 +198,7 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:20px; top:80%;}
+            0%   {left:10%; top:80%;}
             100% {left:80%; top:10%;}
         }
 
