--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -185,16 +185,16 @@ title: Math, Sonification, Plots
 
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes tracePlt {
-            0%   {left:20px; top:0px;}
-            100% {left:790px; top:600px;}
+            0%   {left:17%; top:82%;}
+            100% {left:82%; top:15%;}
         }
         @-moz-keyframes tracePlt {
-            0%   {left:20px; top:0px;}
-            100% {left:790px; top:600px;}
+            0%   {left:17%; top:82%;}
+            100% {left:82%; top:15%;}
         }
         @-o-keyframes tracePlt {
-            0%   {left:20px; top:0px;}
-            100% {left:790px; top:600px;}
+            0%   {left:17%; top:82%;}
+            100% {left:82%; top:15%;}
         }
         /* Standard syntax */
         @keyframes tracePlt {
