--- a/line/index.html
+++ b/line/index.html
@@ -185,15 +185,15 @@ title: Math, Sonification, Plots
 
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes tracePlt {
-            0%   {left:20px; top:0px;}
+            0%   {left:17%; top:15%;}
             100% {left:80%; top:80%;}
         }
         @-moz-keyframes tracePlt {
-            0%   {left:20px; top:0px;}
+            0%   {left:17%; top:15%;}
             100% {left:80%; top:80%;}
         }
         @-o-keyframes tracePlt {
-            0%   {left:20px; top:0px;}
+            0%   {left:17%; top:15%;}
             100% {left:80%; top:80%;}
         }
         /* Standard syntax */
