--- a/parabola/index.html
+++ b/parabola/index.html
@@ -113,7 +113,7 @@ title: Math, Sonification, Plots
                 text-justify: inter-word;
         }
 
-        .fit, #myContainer {  /* set relative picture size */
+        .fit {  /* set relative picture size */
                 max-width: 100%;
                 max-height: 100%;
         }
@@ -185,21 +185,21 @@ title: Math, Sonification, Plots
 
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes tracePlt {
-            0%   {left:285px; top:490px;}
-            100% {left:808px; top:895px;}
+            0%   {left:17%; top:15%;}
+            100% {left:80%; top:80%;}
         }
         @-moz-keyframes tracePlt {
-            0%   {left:285px; top:490px;}
-            100% {left:808px; top:895px;}
+            0%   {left:17%; top:15%;}
+            100% {left:80%; top:80%;}
         }
         @-o-keyframes tracePlt {
-            0%   {left:285px; top:490px;}
-            100% {left:808px; top:895px;}
+            0%   {left:17%; top:15%;}
+            100% {left:80%; top:80%;}
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:285px; top:490px;}
-            100% {left:808px; top:895px;}
+            0%   {left:17%; top:15%;}
+            100% {left:80%; top:80%;}
         }
 
         /*
@@ -239,45 +239,47 @@ title: Math, Sonification, Plots
     </ul></nav>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
-    <img id="parabola" class="center" style="width:800px;height:600px"
-         src="https://rbobkoskie3.github.io/images/ST_Neg_Parabola.png"
-         title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
+    <div class="center fit myContainer">
+        <img id="line" class="center fit myContainer"
+            src="https://rbobkoskie3.github.io/images/ST_Neg_Parabola.png"
+            title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
 
-    <script>
-        function change() {
-            var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Parabola.png",
-                img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Parabola.png";
-            var imgElement = document.getElementById('parabola');
-            imgElement.src = (imgElement.src === img1)? img2 : img1;
-        }
+        <div id ="myAnimation"></div>
 
-        var gtech = document.getElementById("gtech");
-        var parabola = document.getElementById("parabola");
-        function setBG_Black() {
-            document.getElementById("myAnimation").style.backgroundColor = "yellow";
-            document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
-            document.body.style.color = "yellow";
-            gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
-            parabola.src = "https://rbobkoskie3.github.io/images/HC_Neg_Parabola.png";
-        }
-        function setBG_White() {
-            document.getElementById("myAnimation").style.backgroundColor = "black";
-            document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
-            document.body.style.color = "black";
-            gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
-            parabola.src = "https://rbobkoskie3.github.io/images/ST_Neg_Parabola.png";
-        }
-    </script>
+    </div>
 
-    <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
-    <!-- div class="tracePlot"></div -->
-    <div id ="myAnimation"></div>
+        <audio id="audio" src="https://rbobkoskie3.github.io/sounds/parabola_neg.mp4"></audio>
+        <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
+        <button class="play" onclick="play(this)">SONIFICATION</button>
+        <br>
+        <button class="volDec" onclick="vol_dec()">-</button>
+        <button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 
-    <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-    <button class="play" onclick="play(this)">SONIFICATION</button>
-    <br>
-    <button class="volDec" onclick="vol_dec()">-</button>
-    <button class="volInc" onclick="vol_inc()">+ VOLUME</button>
+        <script>
+            function change() {
+                var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Parabola.png",
+                    img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Parabola.png";
+                var imgElement = document.getElementById('line');
+                imgElement.src = (imgElement.src === img1)? img2 : img1;
+            }
+
+            var gtech = document.getElementById("gtech");
+            var plot = document.getElementById("line");
+            function setBG_Black() {
+                document.getElementById("myAnimation").style.backgroundColor = "yellow";
+                document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
+                document.body.style.color = "yellow";
+                gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
+                plot.src = "https://rbobkoskie3.github.io/images/HC_Neg_Parabola.png";
+            }
+            function setBG_White() {
+                document.getElementById("myAnimation").style.backgroundColor = "black";
+                document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
+                document.body.style.color = "black";
+                gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
+                plot.src = "https://rbobkoskie3.github.io/images/ST_Neg_Parabola.png";
+            }
+        </script>
 
         <script>
                 var audio = document.getElementById("audio");
