--- a/parabola/index.html
+++ b/parabola/index.html
@@ -180,7 +180,8 @@ title: Math, Sonification, Plots
                 animation-duration: 5s;
                 animation-iteration-count: infinite;
                 animation-direction: normal;
-                transition-timing-function: linear;
+                // transition-timing-function: linear;
+                transition-timing-function: cubic-bezier(0,0,1,1);
         }
 
         /* Safari 4.0 - 8.0 */
