--- a/parabola/index.html
+++ b/parabola/index.html
@@ -181,8 +181,8 @@ title: Math, Sonification, Plots
                 animation-iteration-count: infinite;
                 animation-direction: normal;
                 // transition-timing-function: linear;
-                // transition-timing-function: cubic-bezier(1,0,0,1);
-                transition-timing-function: ease;
+                transition-timing-function: cubic-bezier(0,1,1,0);
+                // transition-timing-function: ease;
         }
 
         /* Safari 4.0 - 8.0 */
