--- a/parabola/index.html
+++ b/parabola/index.html
@@ -201,7 +201,8 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:17%; top:15%;}
+            0%   {left:17%; top:80%;}
+            50%  {transform: rotate(0deg) translateX(30%) translateY(30%) rotate(0deg);}
             100% {left:80%; top:80%;}
         }
 
