--- a/parabola/index.html
+++ b/parabola/index.html
@@ -203,6 +203,7 @@ title: Math, Sonification, Plots
         @keyframes tracePlt {
             0%   {left:17%; top:80%;}
             50%  {transform: rotate(0deg) translateX(30%) translateY(30%) rotate(0deg);}
+            75%  {transform: rotate(50deg) translateX(30%) translateY(30%) rotate(50deg);}
             100% {left:80%; top:80%;}
         }
 
