--- a/parabola/index.html
+++ b/parabola/index.html
@@ -141,56 +141,71 @@ title: Math, Sonification, Plots
                 background-color: #555;
                 border-radius: 50%;
 
-                -webkit-animation: xAxis 2.5s infinite cubic-bezier(0.02, 0.01, 0.21, 1);
-                animation: xAxis 2.5s infinite cubic-bezier(0.02, 0.01, 0.21, 1);
+                /*
+                 * Sets up the animation duration, timing-function (or easing)
+                 * and iteration-count. Ensure you use the appropriate vendor-specific 
+                 * prefixes as well as the official syntax for now. Remember, tools like 
+                 * CSS Please are your friends!
+                 */
+                // -webkit-animation: myOrbit 4s linear infinite; /* Chrome, Safari 5 */
+                //    -moz-animation: myOrbit 4s linear infinite; /* Firefox 5-15 */
+                //      -o-animation: myOrbit 4s linear infinite; /* Opera 12+ */
+                //         animation: myOrbit 4s linear infinite; /* Chrome, Firefox 16+, 
+                                                                   * IE 10+, Safari 5 */
+
+                -webkit-animation-play-state:paused;
+                -moz-animation-play-state:paused;
+                -o-animation-play-state:paused;
+                animation-play-state:paused;
+
+                -webkit-animation-name: tracePlt;            /* Safari 4.0 - 8.0 */
+                -webkit-animation-duration: 5s;              /* Safari 4.0 - 8.0 */
+                -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
+                -webkit-animation-direction: normal;         /* Safari 4.0 - 8.0 */
+                -webkit-transition-timing-function: linear;  /* Safari 4.0 - 8.0 */
+                -webkit-transition-timing-function: cubic-bezier(1,0,0,1);
+
+                -moz-animation-name: tracePlt;
+                -moz-animation-duration: 5s;
+                -moz-animation-iteration-count: infinite;
+                -moz-animation-direction: normal;
+                -moz-transition-timing-function: linear;
+
+                -o-animation-name: tracePlt;
+                -o-animation-duration: 5s;
+                -o-animation-iteration-count: infinite;
+                -o-animation-direction: normal;
+                -o-transition-timing-function: linear;
+
+                animation-name: tracePlt;
+                animation-duration: 5s;
+                animation-iteration-count: infinite;
+                animation-direction: normal;
+                // transition-timing-function: linear;
+                transition-timing-function: cubic-bezier(1,0,0,1);
+                // transition-timing-function: ease;
         }
 
-        #myAnimation::after {
-                content: '';
-                display: block;
-                width: 20px;
-                height: 20px;
-                border-radius: 20px;
-
-                -webkit-animation: yAxis 2.5s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
-                animation: yAxis 2.5s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
+        /* Safari 4.0 - 8.0 */
+        @-webkit-keyframes tracePlt {
+            0%   {left:17%; top:15%;}
+            100% {left:80%; top:80%;}
         }
-
-@-webkit-keyframes yAxis {
-  50% {
-    -webkit-animation-timing-function: cubic-bezier(0.02, 0.01, 0.21, 1);
-    animation-timing-function: cubic-bezier(0.02, 0.01, 0.21, 1);
-    -webkit-transform: translateY(-100px);
-    transform: translateY(-100px);
-  }
-}
-
-@keyframes yAxis {
-  50% {
-    -webkit-animation-timing-function: cubic-bezier(0.02, 0.01, 0.21, 1);
-    animation-timing-function: cubic-bezier(0.02, 0.01, 0.21, 1);
-    -webkit-transform: translateY(-100px);
-    transform: translateY(-100px);
-  }
-}
-
-@-webkit-keyframes xAxis {
-  50% {
-    -webkit-animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
-    animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
-    -webkit-transform: translateX(100px);
-    transform: translateX(100px);
-  }
-}
-
-@keyframes xAxis {
-  50% {
-    -webkit-animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
-    animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
-    -webkit-transform: translateX(100px);
-    transform: translateX(100px);
-  }
-}
+        @-moz-keyframes tracePlt {
+            0%   {left:17%; top:15%;}
+            100% {left:80%; top:80%;}
+        }
+        @-o-keyframes tracePlt {
+            0%   {left:17%; top:15%;}
+            100% {left:80%; top:80%;}
+        }
+        /* Standard syntax */
+        @keyframes tracePlt {
+            0%   {left:17%; top:80%;}
+            50%  {transform: rotate(0deg) translateX(30px) translateY(30px) rotate(0deg);}
+            75%  {transform: rotate(50deg) translateX(430px) translateY(430px) rotate(50deg);}
+            100% {left:80%; top:80%;}
+        }
 
         /*
         // *********************************
