--- a/parabola/index.html
+++ b/parabola/index.html
@@ -202,7 +202,8 @@ title: Math, Sonification, Plots
         /* Standard syntax */
         @keyframes tracePlt {
             0%   {left:17%; top:80%;}
-            50%  {transform: rotate(-10deg) translateX(150px) translateY(150px) rotate(110deg);}
+            40%  {left:37%; top:30%;}
+            60%  {transform: rotate(-110deg) translateX(150px) translateY(150px) rotate(110deg);}
             100% {left:80%; top:80%;}
         }
 
