--- a/parabola/index.html
+++ b/parabola/index.html
@@ -202,8 +202,8 @@ title: Math, Sonification, Plots
         @keyframes tracePlt {
             0%   {left:17%; top:80%;}
             35%  {left:30%; top:30%;}
-            50%  {transform: rotate(45deg) translateX(0%) translateY(100%) rotate(0deg);}
-            85%  {transform: rotate(45deg) translateX(100%) translateY(0%) rotate(0deg);}
+            50%  {transform: rotate(45deg) translateX(20px) translateY(40px) rotate(0deg);}
+            85%  {transform: rotate(90deg) translateX(20px) translateY(40px) rotate(0deg);}
             100% {left:80%; top:80%;}
         }
 
