--- a/parabola/index.html
+++ b/parabola/index.html
@@ -201,9 +201,8 @@ title: Math, Sonification, Plots
         /* Standard syntax */
         @keyframes tracePlt {
             0%   {left:17%; top:80%;}
-            25%  {left:30%; top:20%;}
-            50%  {left:60%; top:15%;}
-            75%  {left:70%; top:20%;}
+            30%  {left:30%; top:20%;}
+            75%  {transform: rotate(0deg) translateX(120px) translateY(10px) rotate(0deg);}
             100% {left:80%; top:80%;}
         }
 
