--- a/parabola/index.html
+++ b/parabola/index.html
@@ -202,7 +202,7 @@ title: Math, Sonification, Plots
         @keyframes tracePlt {
             0%   {left:17%; top:80%;}
             30%  {left:30%; top:20%;}
-            75%  {transform: rotate(0deg) translateX(120px) translateY(10px) rotate(0deg);}
+            75%  {transform: rotate(20deg) translate(50px, 10px);}
             100% {left:80%; top:80%;}
         }
 
