--- a/parabola/index.html
+++ b/parabola/index.html
@@ -202,8 +202,8 @@ title: Math, Sonification, Plots
         @keyframes tracePlt {
             0%   {left:17%; top:80%;}
             25%  {left:30%; top:20%;}
-            50%  {transform: rotate(20deg) translate(50%, 10%);}
-            75%  {transform: rotate(40deg) translate(70%, 20%);}
+            50%  {transform: rotate(50deg) translate(20px, 10px);}
+            75%  {transform: rotate(70deg) translate(20px, -10px);}
             // 30%  {left:30%; top:20%;}
             // 75%  {transform: rotate(0deg) translateX(120px) translateY(10px) rotate(0deg);}
             100% {left:80%; top:80%;}
