--- a/parabola/index.html
+++ b/parabola/index.html
@@ -205,7 +205,8 @@ title: Math, Sonification, Plots
             // 50%  {transform: rotate(50deg) translate(20px, 10px);}
             // 75%  {transform: rotate(70deg) translate(20px, -10px);}
             30%  {left:30%; top:20%;}
-            75%  {transform: rotate(0deg) translateX(120px) translateY(10px) rotate(0deg);}
+            // 75%  {transform: rotate(0deg) translateX(120px) translateY(10px) rotate(0deg);}
+            75%  {transform: rotate(0deg) translateX(120) translateY(10) rotate(0deg);}
             100% {left:80%; top:80%;}
         }
 
