--- a/parabola/index.html
+++ b/parabola/index.html
@@ -204,9 +204,11 @@ title: Math, Sonification, Plots
             // 25%  {left:30%; top:20%;}
             // 50%  {transform: rotate(50deg) translate(20px, 10px);}
             // 75%  {transform: rotate(70deg) translate(20px, -10px);}
-            30%  {left:35%; top:30%;}
+            25%  {left:35%; top:30%;}
             // 75%  {transform: rotate(0deg) translateX(120px) translateY(10px) rotate(0deg);}
-            75%  {transform: rotate(-40deg) translateX(10%) translateY(10%) rotate(40deg);}
+            // 75%  {transform: rotate(-40deg) translateX(10%) translateY(10%) rotate(40deg);}
+            50%  {transform: rotate(-189deg) translate(45%, 20%);}
+            75%  {transform: rotate(160deg) translate(5%, 20%);}
             100% {left:80%; top:80%;}
         }
 
