--- a/parabola/index.html
+++ b/parabola/index.html
@@ -208,7 +208,8 @@ title: Math, Sonification, Plots
             // 75%  {transform: rotate(0deg) translateX(120px) translateY(10px) rotate(0deg);}
             // 75%  {transform: rotate(-40deg) translateX(10%) translateY(10%) rotate(40deg);}
             // 50%  {transform: rotate(-189deg) translate(45%, 20%);}
-            75%  {transform: rotate(-60deg) translateX(40%) rotate(60deg);}
+            50%  {transform: rotate(-60deg) translateX(40%) translateY(10%) rotate(60deg);}
+            75%  {transform: rotate(60deg) translateX(45%) translateY(20%) rotate(-60deg);}
             100% {left:80%; top:80%;}
         }
 
