--- a/parabola/index.html
+++ b/parabola/index.html
@@ -209,7 +209,7 @@ title: Math, Sonification, Plots
             // 75%  {transform: rotate(-40deg) translateX(10%) translateY(10%) rotate(40deg);}
             // 50%  {transform: rotate(-189deg) translate(45%, 20%);}
             // 50%  {transform: rotate(-60deg) translateX(40%) translateY(10%) rotate(60deg);}
-            75%  {transform: rotate(-60deg) translateY(10%) rotate(60deg);}
+            75%  {transform: rotate(-60deg) left(60%) top(10%) rotate(60deg);}
             100% {left:80%; top:80%;}
         }
 
