--- a/parabola/index.html
+++ b/parabola/index.html
@@ -210,6 +210,7 @@ title: Math, Sonification, Plots
             // 50%  {transform: rotate(-189deg) translate(45%, 20%);}
             // 50%  {transform: rotate(-60deg) translateX(40%) translateY(10%) rotate(60deg);}
             // 75%  {transform: rotate(-60deg); left(60%); top(10%); rotate(60deg);}
+            75%  {transform: matrix(1, -0.3, 0, 1, 0, 0);}
             100% {left:80%; top:80%;}
         }
 
