--- a/parabola/index.html
+++ b/parabola/index.html
@@ -205,12 +205,11 @@ title: Math, Sonification, Plots
             // 50%  {transform: rotate(50deg) translate(20px, 10px);}
             // 75%  {transform: rotate(70deg) translate(20px, -10px);}
             25%  {left:35%; top:30%;}
-            // 75%  {transform: rotate(0deg) translateX(120px) translateY(10px) rotate(0deg);}
+            75%  {transform: rotate(-60deg) translateX(120px) translateY(40px) rotate(60deg);}
             // 75%  {transform: rotate(-40deg) translateX(10%) translateY(10%) rotate(40deg);}
             // 50%  {transform: rotate(-189deg) translate(45%, 20%);}
             // 50%  {transform: rotate(-60deg) translateX(40%) translateY(10%) rotate(60deg);}
             // 75%  {transform: rotate(-60deg); left(60%); top(10%); rotate(60deg);}
-            75%  {transform: matrix(1, -0.3, 0, 1, 0, 0);}
             100% {left:80%; top:80%;}
         }
 
