--- a/parabola/index.html
+++ b/parabola/index.html
@@ -206,7 +206,8 @@ title: Math, Sonification, Plots
             // 75%  {transform: rotate(120deg) translateX(120px) translateY(40px) rotate(-120deg);}
             // 100% {left:80%; top:80%;}
 
-            0%   { transform: scale(0.0); animation-timing-function: cubic-bezier(0.33333, 0.66667, 0.66667, 1) }
+            0%   {left:17%; top:80%;}
+            30%   { transform: scale(0.0); animation-timing-function: cubic-bezier(0.33333, 0.66667, 0.66667, 1) }
             70%  { transform: scale(1.2); animation-timing-function: cubic-bezier(0.33333, 0, 0.66667, 0.33333) }
             100% { transform: scale(1.0) }
         }
