--- a/parabola/index.html
+++ b/parabola/index.html
@@ -207,9 +207,9 @@ title: Math, Sonification, Plots
             // 100% {left:80%; top:80%;}
 
             0%   {left:17%; top:80%;}
-            30%   { transform: scale(0.0); animation-timing-function: cubic-bezier(0.33333, 0.66667, 0.66667, 1) }
-            70%  { transform: scale(1.2); animation-timing-function: cubic-bezier(0.33333, 0, 0.66667, 0.33333) }
-            100% { transform: scale(1.0) }
+            70%  {transform-origin: 39% 10%; rotate(-60deg);}
+            // 70%  { transform: scale(1.2); animation-timing-function: cubic-bezier(0.33333, 0, 0.66667, 0.33333) }
+            100% {left:80%; top:80%;}
         }
 
         /*
