--- a/parabola/index.html
+++ b/parabola/index.html
@@ -207,7 +207,8 @@ title: Math, Sonification, Plots
             // 100% {left:80%; top:80%;}
 
             0%   {left:17%; top:80%;}
-            70%  {transform-origin: 39% 10%; rotate(-60deg);}
+            25%  {left:35%; top:30%;}
+            75%  {rotate(-60deg); transform-origin: 40% 10%;}
             // 70%  { transform: scale(1.2); animation-timing-function: cubic-bezier(0.33333, 0, 0.66667, 0.33333) }
             100% {left:80%; top:80%;}
         }
