--- a/parabola/index.html
+++ b/parabola/index.html
@@ -180,9 +180,9 @@ title: Math, Sonification, Plots
                 animation-duration: 5s;
                 animation-iteration-count: infinite;
                 animation-direction: normal;
-                transition-timing-function: linear;
+                // transition-timing-function: linear;
                 // transition-timing-function: cubic-bezier(1,0,0,1);
-                // transition-timing-function: ease;
+                transition-timing-function: ease;
         }
 
         /* Safari 4.0 - 8.0 */
