--- a/parabola/index.html
+++ b/parabola/index.html
@@ -181,8 +181,8 @@ title: Math, Sonification, Plots
                 animation-iteration-count: infinite;
                 animation-direction: normal;
                 // transition-timing-function: linear;
-                // transition-timing-function: cubic-bezier(1,0,0,1);
-                transition-timing-function: ease;
+                transition-timing-function: cubic-bezier(1,0,0,1);
+                // transition-timing-function: ease;
         }
 
         /* Safari 4.0 - 8.0 */
@@ -202,7 +202,8 @@ title: Math, Sonification, Plots
         @keyframes tracePlt {
             0%   {left:17%; top:80%;}
             25%  {left:35%; top:30%;}
-            75%  {rotate(-60deg); left:50%; top:15%; rotate(60deg);}
+            50%  {rotate(-60deg); left:45%; top:15%; rotate(60deg);}
+            75%  {rotate(60deg); left:55%; top:15%; rotate(-60deg);}
             100% {left:80%; top:80%;}
         }
 
