--- a/parabola/index.html
+++ b/parabola/index.html
@@ -180,9 +180,9 @@ title: Math, Sonification, Plots
                 animation-duration: 5s;
                 animation-iteration-count: infinite;
                 animation-direction: normal;
-                // transition-timing-function: linear;
+                transition-timing-function: linear;
                 // transition-timing-function: cubic-bezier(1,0,0,1);
-                transition-timing-function: ease;
+                // transition-timing-function: ease;
         }
 
         /* Safari 4.0 - 8.0 */
@@ -204,7 +204,7 @@ title: Math, Sonification, Plots
             25%  {left:35%; top:30%;}
             50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg);}
             75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg);}
-            100% {left:80%; top:80%;}
+            100% {left:85%; top:80%;}
         }
 
         /*
